# sunkcosts.github.io

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
archive/: references.bib
archive/icon_animation/: ffmpeg_convert.sh  generate_gif.py  slow_down_unused.py
conference/: index.html
contact/: index.html
docs/: conference.md  contact.md  index.md  overview.md  references.md  report.md
docs/model/: embed.md  note.md
docs/reference/: dataset.md  index.md  package.md  publication.md  service.md  tool.md
docs/report/: introduction.md
docs/resource/: application.md  conference.md  dataset.md  index.md  model.md  repository.md
docs/stylesheets/: extra.css
file/: credentials.template.toml
file/main/: plotly.graph.126_vs_585_pdf.html  plotly.graph.lsa_gmsl_scatterplot.html  plotly.graph.lsa_kopp_scatterplot.html
model/embed/: index.html
model/note/: index.html
overrides/partials/: footer.html  header.html
references/: index.html
report/: index.html  index.md
report/file/main/: plotly.graph.lsa_gmsl_scatterplot.html  plotly.graph.lsa_kopp_scatterplot.html  plotly.graph.ssp_245_medium_2100_pdf.html  plotly.map.aoa_bounds_mapbox.html
report/static/script/: search.js  tabs.js  video.js
report/static/styles/: global.admonition.css  global.theme.css  max.theme.css  min.theme.css  (+1 more)
resources/: index.html
scripts/: build_site_assets.py
search/: search_index.json
static/custom/: main.html  quicklinks.html
static/script/: quicklink.js  search.js  video-test.js
static/styles/: global.notebook.css  max.theme.css  med.theme.css  testing.css
sunkcosts/: cli.py  curve.py  data.py  download.py  env.py  example.py  plotly.py  tokens.py
sunkcosts/app/: config.py  main.py
sunkcosts/model/: ar6.py  factor.py  main.py  premise.py
sunklib/: cli.py  env.py  tokens.py
sunklib/app/: main.py
sunklib/util/: auth.py  client.py  io.py  plotly.py  term.py
website/: analysis.integrate.md  analysis.md  include-results-here-later.md  index.md
website/analysis/: artifacts.md  index.md  introduction.md  references.md  sea_level_rise.md
website/approach/: sea_level_rise.md
website/docs/: index.md
website/documentation/: index.md  reproduce.md  setup.md  structure.md
website/plot/: noaa_lsa_global_slr_seasons_normalized.html
website/sort/: ideas.md
(+20 files in other folders)
