[tool.poetry]
name = "sunkcosts"
version = "0.1.0"
description = "Collection of utilities, app, and model, for Sunk Costs project."
readme = "README.md"
repository = "https://github.com/sunkcosts"
documentation = "https://sunkcosts.github.io"
authors = ["Hart Traveller <guider.adopt0l@icloud.com>", "Luke Moloney <NA>"]
maintainers = ["Hart Traveller <guider.adopt0l@icloud.com>"]

[tool.poetry.dependencies]
python = ">3.9.7, <=3.12"
streamlit = "^1.27.2"
watchdog = "^3.0.0"
mercantile = "^1.2.1"
xlrd = "^2.0.1"
tqdm = "^4.66.1"
netcdf4 = "^1.6.4"
matplotlib = "^3.8.0"
scipy = "^1.11.3"
mkdocs-material-extensions = "^1.3"
pymdown-extensions = "^10.3.1"
pydantic = "^2.4.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4.2"
mkdocstrings = "^0.23.0"
mkdocs-click = "^0.8.1"
mkdocs-glightbox = "^0.3.4"
mkdocs-roamlinks-plugin = "^0.3.2"
mkdocs-jupyter = "^0.24.5"
kaleido = "==0.2.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.scripts]
scli = "sunkcosts.cli:scli"
